adopt-a-pup/envoy-gateway/envoy-gateway-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    app: envoy-gateway
  name: envoy-gateway
data:
  envoy.yaml: |-
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    static_resources:
      listeners:
        - name: listener_external
          address:
            socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  config:
                    stat_prefix: gateway_external
                    codec_type: AUTO
                    route_config:
                      name: external_route
                      virtual_hosts:
                        - name: external_gateway_route
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/animals/" }
                              route: { cluster: animal-service, timeout: { seconds: 60 } }
                            - match: { prefix: "/adoption/" }
                              route: { cluster: adoption-service, timeout: { seconds: 60 } }
                            - match: { prefix: "/shelter/" }
                              route: { cluster: shelter-service, timeout: { seconds: 60 } }
                            - match: { prefix: "/email/" }
                              route: { cluster: email-service, timeout: { seconds: 60 } }
                          cors:
                            allow_methods: GET, PUT, DELETE, POST, OPTIONS
                            allow_headers: access-control-allow-origin,access-control-request-header,access-control-request-method,authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent
                            max_age: "1728000"
                            expose_headers: x-total-pages,x-total-count
                    http_filters:
                      - name: envoy.cors
                      - name: envoy.router
      clusters:
        - name: animal-service
          connect_timeout: 1.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: animal-service
                port_value: 8080
        - name: adoption-service
          connect_timeout: 1.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: adoption-service
                port_value: 8080
        - name: shelter-service
          connect_timeout: 1.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: shelter-service
                port_value: 8080
        - name: email-service
          connect_timeout: 1.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: email-service
                port_value: 8080
