adopt-a-pup/envoy-gateway/envoy-gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: envoy-gateway
  name: envoy-gateway
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: envoy-gateway
    weight: 100
  wildcardPolicy: None
