adopt-a-pup/envoy-gateway/envoy-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy-gateway
  name: envoy-gateway
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 9901-9901
      port: 9901
      protocol: TCP
      targetPort: 9901
  selector:
    app: envoy-gateway
  sessionAffinity: None
  type: ClusterIP
